// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductIcons snapshots > baseball renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L9 11 L10 22 L14 21 L14 33 L26 33 L26 21 L30 22 L31 11 L25 8 C23 11 17 11 15 8 Z"
  />
  <path
    d="M17 10 L10 22"
  />
  <path
    d="M23 10 L30 22"
  />
  <path
    d="M19 24 L19 28"
  />
  <path
    d="M21 24 L21 28"
  />
</svg>
`;

exports[`ProductIcons snapshots > hoodie_pullover renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 13 Q20 4 26 13"
  />
  <path
    d="M14 13 L7 16 L10 23 L14 22 L14 33 L26 33 L26 22 L30 23 L33 16 L26 13"
  />
  <path
    d="M17 14 Q20 18 23 14"
  />
  <path
    d="M15 24 L25 24 L23 30 L17 30 Z"
  />
  <path
    d="M19 14 L19 18"
  />
  <path
    d="M21 14 L21 18"
  />
</svg>
`;

exports[`ProductIcons snapshots > hoodie_zip renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 13 Q20 4 26 13"
  />
  <path
    d="M14 13 L7 16 L10 23 L14 22 L14 33 L26 33 L26 22 L30 23 L33 16 L26 13"
  />
  <path
    d="M17 14 Q20 18 23 14"
  />
  <path
    d="M20 16 L20 33"
  />
  <circle
    cx="20"
    cy="21"
    fill="currentColor"
    r="0.8"
  />
</svg>
`;

exports[`ProductIcons snapshots > long_sleeve renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L5 12 L5 26 L11 26 L11 33 L29 33 L29 26 L35 26 L35 12 L25 8 C23 11 17 11 15 8 Z"
  />
</svg>
`;

exports[`ProductIcons snapshots > mug renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9 11 L25 11 L25 32 Q25 34 23 34 L11 34 Q9 34 9 32 Z"
  />
  <path
    d="M25 15 L29 15 Q32 15 32 19 L32 24 Q32 28 29 28 L25 28"
  />
  <path
    d="M12 15 L22 15"
  />
</svg>
`;

exports[`ProductIcons snapshots > performance renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L8 12 L11 19 L14 18 L14 33 L26 33 L26 18 L29 19 L32 12 L25 8 C23 11 17 11 15 8 Z"
  />
  <path
    d="M21 18 L18 23 L21 23 L19 28"
  />
</svg>
`;

exports[`ProductIcons snapshots > phone_case renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="30"
    rx="3"
    width="18"
    x="11"
    y="5"
  />
  <rect
    height="2"
    rx="1"
    width="6"
    x="17"
    y="8"
  />
  <circle
    cx="20"
    cy="14"
    r="2"
  />
  <circle
    cx="20"
    cy="14"
    fill="currentColor"
    r="0.8"
  />
</svg>
`;

exports[`ProductIcons snapshots > popsocket renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="20"
    cy="20"
    r="11"
  />
  <circle
    cx="20"
    cy="20"
    r="4"
  />
  <path
    d="M12 14 L14 15.5"
  />
  <path
    d="M28 14 L26 15.5"
  />
  <path
    d="M12 26 L14 24.5"
  />
  <path
    d="M28 26 L26 24.5"
  />
</svg>
`;

exports[`ProductIcons snapshots > raglan renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L8 12 L11 19 L14 18 L14 33 L26 33 L26 18 L29 19 L32 12 L25 8 C23 11 17 11 15 8 Z"
  />
  <path
    d="M17 10 L14 18"
  />
  <path
    d="M23 10 L26 18"
  />
</svg>
`;

exports[`ProductIcons snapshots > sweatshirt renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L7 12 L10 20 L14 19 L14 31 L10 34 L30 34 L26 31 L26 19 L30 20 L33 12 L25 8 C23 11 17 11 15 8 Z"
  />
  <path
    d="M14 31 L26 31"
  />
  <path
    d="M10 19 L14 19"
  />
  <path
    d="M26 19 L30 19"
  />
</svg>
`;

exports[`ProductIcons snapshots > t_shirt renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L8 12 L11 19 L14 18 L14 33 L26 33 L26 18 L29 19 L32 12 L25 8 C23 11 17 11 15 8 Z"
  />
</svg>
`;

exports[`ProductIcons snapshots > t_shirt_heavyweight renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L8 12 L11 19 L14 18 L14 33 L26 33 L26 18 L29 19 L32 12 L25 8 C23 11 17 11 15 8 Z"
  />
  <path
    d="M10.5 17 L13.5 16"
  />
  <path
    d="M26.5 16 L29.5 17"
  />
  <path
    d="M15 30 L25 30"
  />
</svg>
`;

exports[`ProductIcons snapshots > t_shirt_premium renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L8 12 L11 19 L14 18 L14 33 L26 33 L26 18 L29 19 L32 12 L25 8 C23 11 17 11 15 8 Z"
  />
  <path
    d="M20 20 L21 23 L24 23 L21.6 24.8 L22.5 27.6 L20 26 L17.5 27.6 L18.4 24.8 L16 23 L19 23 Z"
  />
</svg>
`;

exports[`ProductIcons snapshots > tank_top renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 8 L14 14 L11 16 L11 33 L29 33 L29 16 L26 14 L26 8"
  />
  <path
    d="M14 8 C17 12 23 12 26 8"
  />
</svg>
`;

exports[`ProductIcons snapshots > throw_pillow renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10 12 Q6 20 10 28 Q20 33 30 28 Q34 20 30 12 Q20 7 10 12 Z"
  />
  <path
    d="M13 14 L11 12"
  />
  <path
    d="M27 14 L29 12"
  />
  <path
    d="M13 26 L11 28"
  />
  <path
    d="M27 26 L29 28"
  />
</svg>
`;

exports[`ProductIcons snapshots > tote_bag renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 12 Q14 5 20 5 Q26 5 26 12"
  />
  <path
    d="M9 12 L31 12 L33 34 L7 34 Z"
  />
  <path
    d="M15 18 L15 22"
  />
  <path
    d="M25 18 L25 22"
  />
</svg>
`;

exports[`ProductIcons snapshots > trucker_hat renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9 23 C9 13 13 9 20 9 C27 9 31 13 31 23"
  />
  <path
    d="M5 23 L35 23 L32 28 L8 28 Z"
  />
  <path
    d="M14 14 L14 23"
  />
  <path
    d="M20 11 L20 23"
  />
  <path
    d="M26 14 L26 23"
  />
</svg>
`;

exports[`ProductIcons snapshots > tumbler renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14 7 L26 7 L28 10 L26 13 L14 13 L12 10 Z"
  />
  <path
    d="M14 13 L15 34 L25 34 L26 13"
  />
  <path
    d="M15 18 L25 18"
  />
  <path
    d="M28 10 Q32 11 32 16"
  />
</svg>
`;

exports[`ProductIcons snapshots > v_neck renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M15 8 L8 12 L11 19 L14 18 L14 33 L26 33 L26 18 L29 19 L32 12 L25 8 L20 15 Z"
  />
</svg>
`;

exports[`ProductIcons snapshots > water_bottle renders stable markup 1`] = `
<svg
  aria-hidden="true"
  fill="none"
  height="40"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1.75"
  viewBox="0 0 40 40"
  width="40"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 4 L23 4 L23 8 L17 8 Z"
  />
  <path
    d="M16 8 L24 8 L24 11 Q27 13 27 17 L27 33 Q27 36 24 36 L16 36 Q13 36 13 33 L13 17 Q13 13 16 11 Z"
  />
  <path
    d="M13 17 L27 17"
  />
</svg>
`;
